# processfox_local

./: .gitignore  CLAUDE.md  CONCEPT.md  LLM_COMPATIBILITY.md  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/bench-candle/: Cargo.toml
benchmarks/bench-candle/src/: main.rs
benchmarks/bench-mistralrs/: Cargo.toml
benchmarks/bench-mistralrs/src/: main.rs
docs/: architecture.md  roadmap.md
docs/skills/: SKILL_TEMPLATE.md  chat-context.md  context-document-read.md  document-create-docx.md  document-edit.md  document-extend.md  document-read.md  folder-search.md  table-read.md  table-update.md
landing/: index.html
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: catalog.json
src-tauri/skills_builtin/chat-context/: SKILL.md
src-tauri/skills_builtin/document-create-docx/: SKILL.md
src-tauri/skills_builtin/document-edit/: SKILL.md
src-tauri/skills_builtin/document-extend/: SKILL.md
src-tauri/skills_builtin/document-from-template/: SKILL.md
src-tauri/skills_builtin/document-read/: SKILL.md
src-tauri/skills_builtin/folder-search/: SKILL.md
src-tauri/skills_builtin/table-create/: SKILL.md
src-tauri/skills_builtin/table-read/: SKILL.md
src-tauri/skills_builtin/table-update/: SKILL.md
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  chat.rs  file.rs  mod.rs  models.rs  secrets.rs  settings.rs  skill.rs
src-tauri/src/core/: agent.rs  error.rs  hardware.rs  mod.rs  sandbox.rs  secrets.rs  settings.rs  storage.rs  types.rs  watcher.rs
src-tauri/src/core/chat/: mod.rs  repo.rs  run.rs
src-tauri/src/core/llm/: anthropic.rs  json_cleanup.rs  local_gguf.rs  mod.rs  openai.rs  openai_compat.rs  openrouter.rs  registry.rs
src-tauri/src/core/models/: catalog.rs  download.rs  installed.rs  mod.rs
src-tauri/src/core/skill/: mod.rs  registry.rs
src-tauri/src/core/tool/: mod.rs  registry.rs
src-tauri/src/core/tool/tools/: append_to_docx.rs  append_to_md.rs  ask_user.rs  grep_in_files.rs  list_folder.rs  mod.rs  read_docx.rs  read_file.rs  read_pdf.rs  read_xlsx_range.rs  rewrite_file.rs  update_xlsx_cell.rs  write_docx.rs  write_docx_from_template.rs  write_xlsx.rs
src/components/: theme-provider.tsx
src/components/agent/: AgentEditorDialog.tsx  AgentSwitcher.tsx  SkillIconRow.tsx
src/components/chat/: AskUserCard.tsx  ChatInput.tsx  ChatPane.tsx  HitlCard.tsx  ReasoningChip.tsx  ToolCallChip.tsx
src/components/filetree/: FileTree.tsx
src/components/preview/: PreviewPane.tsx
src/components/settings/: CloudApisTab.tsx  ModelsTab.tsx
src/components/ui/: DynamicIcon.tsx  tooltip.tsx
src/hooks/: useAgentChat.ts
src/lib/: fileIcons.ts  starterPrompts.ts  tauri.ts  toolIcons.ts
src/types/: agent.ts  chat.ts  error.ts  message.ts  models.ts  settings.ts  skill.ts
src/views/: Main.tsx  Settings.tsx  Welcome.tsx
