# Optimize dependencies even in dev builds. The C++/numerical crates that
# back local inference are ~10× slower in debug mode, which makes local
# inference unusable. Our own crate stays at opt-level 0 so iteration
# time remains fast.
[profile.dev.package."*"]
opt-level = 3

[package]
name = "processfox"
version = "0.1.0"
description = "ProcessFox — Lokale KI-Agenten für Einsteiger"
authors = ["ProcessFox"]
edition = "2021"

[lib]
name = "processfox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

directories = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "http2",
    "gzip",
] }
futures-util = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
eventsource-stream = "0.2"
bytes = "1"

keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }

sysinfo = "0.33"
regex = "1"
include_dir = "0.7"
pdf-extract = "0.7"
calamine = "0.26"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
docx-rs = "0.4"
umya-spreadsheet = "2"

# Local GGUF runtime via llama.cpp. We pick `llama-cpp-2` because it stays
# very close to llama.cpp upstream (gets new architectures fast — including
# Gemma 4) and exposes the OpenAI-compatible chat-template + tool-calling
# parser, so per-model tool-call formats are handled by llama.cpp itself.
#
# On macOS the `metal` feature auto-enables via the crate's own target-spec
# dependency block — requires the Xcode `MetalToolchain` component.
llama-cpp-2 = { version = "0.1", default-features = false, features = [
    "openmp",
    "android-shared-stdcxx",
] }
encoding_rs = "0.8"
