[package]
name = "bench-candle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

candle-core = { version = "0.10", features = ["metal"] }
candle-transformers = "0.10"
